<resources>
    <string name="app_name">WhatsApp</string>
    <string name="verify_91_7894526165">Verify +91-7894526165</string>
    <string name="enter_the_otp_code_to_verify_your_number">Enter the OTP code to verify your number.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_set_your_name_and_an_optional_profile_image">Please set your name and an optional profile image.</string>
    <string name="type_your_name">Type your name</string>
    <string name="setup_profile">SETUP PROFILE</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="we_will_send_an_sms_message_to_verify_your_phone_number">We will send an SMS message to verify your phone number.</string>
    <string name="settings">Settings</string>
    <string name="invite">Invite</string>
    <string name="groups">Groups</string>
    <string name="search">Search</string>
    <string name="sample_name">Sample Name</string>
    <string name="textview">TextView</string>
    <string name="chat_sample">chat sample</string>
    <string name="tap_to_chat">tap to chat</string>
    <string name="_06_00_pm">06:00 PM</string>
    <string name="type_a_message">Type a message</string>
    <string name="todo">TODO</string>
</resources>